Bug 431677 - outparam errors in netwerk/cookie, r=dmandelin