xpcom/base/nscore.h
@@ -256,19 +256,6 @@
 #endif
 
 /**
- * Attributes defined to help Dehydra GCC analysis.	
- */
-#ifdef STATIC_CHECKING
-# define NS_SCRIPTABLE __attribute__((user("NS_script")))
-# define NS_OUTPARAM  __attribute__((user("NS_outparam")))
-# define NS_INOUTPARAM __attribute__((user("NS_inoutparam")))
-#else
-# define NS_SCRIPTABLE
-# define NS_OUTPARAM
-# define NS_INOUTPARAM
-#endif
-
-/**
  * Generic API modifiers which return the standard XPCOM nsresult type
  */
 #define NS_IMETHOD          NS_IMETHOD_(nsresult)
@@ -507,6 +494,19 @@ typedef PRUint32 nsrefcnt;
 #else
 #define NS_STACK_CLASS
 #define NS_FINAL_CLASS
+#endif
+
+/**
+ * Attributes defined to help Dehydra GCC analysis.	
+ */
+#ifdef NS_STATIC_CHECKING
+# define NS_SCRIPTABLE __attribute__((user("NS_script")))
+# define NS_OUTPARAM  __attribute__((user("NS_outparam")))
+# define NS_INOUTPARAM __attribute__((user("NS_inoutparam")))
+#else
+# define NS_SCRIPTABLE
+# define NS_OUTPARAM
+# define NS_INOUTPARAM
 #endif
 
 #endif /* nscore_h___ */
