xpcom/glue/nsArrayEnumerator.h
@@ -51,7 +51,7 @@ class nsCOMArray_base;
 // Create an enumerator for an existing nsIArray implementation
 // The enumerator holds an owning reference to the array.
 NS_COM_GLUE nsresult
-NS_NewArrayEnumerator(nsISimpleEnumerator* *result,
+NS_NewArrayEnumerator(nsISimpleEnumerator* *result NS_OUTPARAM,
                       nsIArray* array);
 
 // create an enumerator for an existing nsCOMArray<T> implementation
@@ -59,7 +59,7 @@ NS_NewArrayEnumerator(nsISimpleEnumerator* *result,
 // the array. This means that the nsCOMArray<T> can safely go away
 // without its objects going away.
 NS_COM_GLUE nsresult
-NS_NewArrayEnumerator(nsISimpleEnumerator* *aResult,
+NS_NewArrayEnumerator(nsISimpleEnumerator* *aResult NS_OUTPARAM,
                       const nsCOMArray_base& aArray);
 
 #endif
